@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.maven.daemon</groupId>
     <artifactId>mvnd</artifactId>
-    <version>2.0.0-beta-2-SNAPSHOT</version>
+    <version>2.0.0-rc-4-SNAPSHOT</version>
   </parent>
 
   <artifactId>mvnd-daemon</artifactId>
@@ -33,18 +33,13 @@
   <properties>
     <!-- If using release, sun.misc is not reachable (see SignalHelper) -->
     <!--    <maven.compiler.release />-->
+    <maven.compiler.proc>full</maven.compiler.proc>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.maven.daemon</groupId>
       <artifactId>mvnd-common</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.slf4j</groupId>
-          <artifactId>slf4j-simple</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.maven.daemon</groupId>
@@ -60,7 +55,15 @@
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
-      <artifactId>maven-embedder</artifactId>
+      <artifactId>maven-resolver-provider</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-cli</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-api-di</artifactId>
     </dependency>
     <dependency>
       <groupId>org.codehaus.plexus</groupId>
@@ -70,20 +73,6 @@
     <dependency>
       <groupId>io.takari.maven</groupId>
       <artifactId>takari-smart-builder</artifactId>
-    </dependency>
-
-    <!-- Logging -->
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>log4j-over-slf4j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jcl-over-slf4j</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
     </dependency>
 
     <dependency>
@@ -99,6 +88,7 @@
     <dependency>
       <groupId>com.google.inject</groupId>
       <artifactId>guice</artifactId>
+      <classifier>classes</classifier>
     </dependency>
 
     <dependency>
@@ -130,6 +120,7 @@
           <argLine>--add-opens java.base/java.io=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
                         --add-opens java.base/sun.nio.fs=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
